# vercel-rust-repro

./: .gitignore  Cargo.toml  package.json  vercel.json
src/pages/: index.tsx
