[package]
name = "simple"
version = "0.1.0"
edition = "2024"
publish = false

[profile.release]
opt-level = 'z'      
codegen-units = 1   
panic = 'abort'      
strip = true        

[dependencies]
http = "1.4.2"
tokio = { version = "1.52.3", features = ["full"] }
vercel_runtime = "2.4.0"
http-body-util = "0.1.3"
hyper = "1.10.1"
rand = "0.10.2"
serde_json = "1.0.150"

[[bin]]
name = "simple"
path = "api/simple.rs"
